--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
           <img class="avatar-img" src="images/davidseal-avatar.png">
           <h3>Hi, I'm David</h3>
           <p class="bio-p">I’m passionate about building smart, simple, and easy-to-use hardware and software products.</p>
-          <p><a href="mailto:david@davidseal.ca">Email</a>  |  <a href="http://www.instagram.com/davidseal">Instagram</a>  |  <a href="http://www.twitter.com/davidseal">Twitter</a>  |  <a href="http://www.linkedin.com/in/dseal/">LinkedIn</a></p>
+          <ul>
+            <li><a href="mailto:david@davidseal.ca"><img alt="Email" src="images/email.png" width="40"></a></li>
+            <li><a href="http://www.instagram.com/davidseal"><img alt="Instagram" src="images/instagram.png" width="40"></a></li>
+            <li><a href="http://www.twitter.com/davidseal"><img alt="Twitter" src="images/twitter.png" width="40"></a></li>
+            <li><a href="http://www.linkedin.com/in/dseal/"><img alt="LinkedIn" src="images/linkedin.png" width="40"></a></p></li>
+          </ul>
         </div>
       </div>
     </div>
