--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <img class="avatar-img" src="images/davidseal-avatar.png">
           <h3>Hi, I'm David</h3>
           <p class="bio-p">I’m passionate about building smart, simple, and easy-to-use hardware and software products.</p>
-          <ul>
+          <ul class="social-list">
             <li><a href="mailto:david@davidseal.ca"><img alt="Email" src="images/email.png" width="40"></a></li>
             <li><a href="http://www.instagram.com/davidseal"><img alt="Instagram" src="images/instagram.png" width="40"></a></li>
             <li><a href="http://www.twitter.com/davidseal"><img alt="Twitter" src="images/twitter.png" width="40"></a></li>
