--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap">
+  <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
@@ -20,7 +21,7 @@
         <div class="one-full column">
           <img class="avatar-img" src="images/davidseal-avatar.png">
           <h3>Hi, I'm David</h3>
-          <p class="bio-p">I’m passionate about building smart, simple, and easy-to-use hardware and software products.</p>
+          <p class="bio-p">I’m passionate about building smart, simple, and easy-to-use software and hardware products.</p>
           <ul class="social-list">
             <li><a href="mailto:david@davidseal.ca"><img alt="Email" src="images/email.png" width="35"></a></li>
             <li><a href="http://www.linkedin.com/in/dseal/"><img alt="LinkedIn" src="images/linkedin.png" width="35"></a></p></li>
