--- a/index.html
+++ b/index.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>David Seal</title>
-  <meta name="description" content="David Seal is a Canadian engineer, product management leader, and entrepeneur working on innovative software and hardware products.">
-  <meta name="author" content="David Seal">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="David Seal – Product thinker, designer, and builder focused on elegant, impactful hardware and software." />
+  <meta name="author" content="David Seal" />
+  <title>David Seal – Product Thinker & Builder</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="canonical" href="https://yourdomain.com/" />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="outerbox">
-    <div class="container">
-      <div class="row">
-        <div class="one-full column">
-          <img class="avatar-img" src="images/davidseal-avatar.png">
-          <h3>Hi, I'm David</h3>
-          <p class="bio-p">I’m passionate about building smart, simple, and easy-to-use software and hardware products.</p>
-          <ul class="social-list">
-            <li><a href="mailto:david@davidseal.ca"><img alt="Email" src="images/email.png" width="35"></a></li>
-            <li><a href="http://www.linkedin.com/in/dseal/"><img alt="LinkedIn" src="images/linkedin.png" width="35"></a></p></li>
-            <li><a href="http://www.instagram.com/davidseal"><img alt="Instagram" src="images/instagram.png" width="35"></a></li>
-            <li><a href="http://www.twitter.com/davidseal"><img alt="Twitter" src="images/twitter.png" width="35"></a></li>
-          </ul>
-        </div>
+  <main>
+    <section class="intro fade-in delay-1">
+      <img src="images/avatar.png" alt="David Seal avatar" class="avatar" />
+      <h1 class="fade-in delay-2"><span class="wave">👋</span> Hi, I'm David</h1>
+      <p class="fade-in delay-3">
+        I'm a product thinker and builder who cares about elegant solutions and lasting impact. I've spent my career creating intuitive software and hardware shaped by real human needs.
+      </p>
+      <div class="links fade-in delay-4">
+        <a href="mailto:you@example.com" target="_blank" class="icon-button">
+          <img src="images/mail.svg" alt="Email" />
+        </a>
+        <a href="https://twitter.com/yourhandle" target="_blank" class="icon-button">
+          <img src="images/x.svg" alt="X" />
+        </a>
+        <a href="https://instagram.com/yourhandle" target="_blank" class="icon-button">
+          <img src="images/instagram.svg" alt="Instagram" />
+        </a>
+        <a href="https://linkedin.com/in/yourprofile" target="_blank" class="icon-button">
+          <img src="images/linkedin.svg" alt="LinkedIn" />
+        </a>
       </div>
-    </div>
-  </div>
+    </section>
+
+    <section class="fade-in delay-5">
+      <h2>Current Focus</h2>
+      <p>At <a href="https://jetsonhome.com/" target="_blank">Jetson</a>, I lead strategy and development of 0-to-1 products that power our mission to electrify homes across North America, including our mobile app, thermostat, and smart home hub, all built to work seamlessly with our all-electric heat pump system.</p>
+    </section>
+
+    <section class="fade-in delay-6">
+      <h2>Work Experience</h2>
+      <p>I've worked as both a developer and product leader at startups (including my own) and at larger companies like Shopify and Nokia. My experience spans launching software, payments, and hardware products, including time on the ground with manufacturing partners in Asia. You can find a detailed overview of my work history on <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>.</p>
+    </section>
+
+    <section class="fade-in delay-7">
+      <h2>Education</h2>
+      <p>Electrical Engineering @ <a href="https://www.dal.ca/" target="_blank">Dalhousie University</a> (graduated with distinction), with internships at Electronic Arts, IBM, and the UK MRC (in The Gambia).</p>
+    </section>
+
+    <section class="fade-in delay-8">
+      <h2>Hobbies</h2>
+      <p>Outside of work, I tinker with 3D printing, electronics, and create interactive light art, including contributing to <a href="https://www.deldiosglasshouse.com/moot" target="_blank">large-scale, climable installations</a>. I also enjoy cooking and working on my pizza recipe.</p>
+    </section>
+
+    <section class="fade-in delay-9">
+      <h2>Highlights</h2>
+      <ul>
+        <li>🕹️ Built and launched a top 100 mobile game for the early iPhone App Store</li>
+        <li>🏆 Won a semi-autonomous robotics competition</li>
+        <li>🚑 Helped retrofit Land Cruisers for rural African healthcare</li>
+        <li>📄 Named on several patents: US12045831, US10878405, US11010044</li>
+        <li>🥌 High school provincial curling champion, very skilled at walking on ice</li>
+      </ul>
+    </section>
+    <footer class="fade-in delay-11">
+      <p>Design and code by me. Hosted on GitHub.</p>
+    </footer>
+  </main>
+  <script src="script.js"></script>
 </body>
 </html>
