--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         I'm a product thinker and builder who cares about elegant solutions and lasting impact. I've spent my career creating intuitive software and hardware shaped by real human needs.
       </p>
       <div class="links fade-in delay-4">
-        <a href="mailto:you@example.com" target="_blank" class="icon-button">
+        <a href="mailto:david@davidseal.ca" target="_blank" class="icon-button">
           <img src="images/mail.svg" alt="Email" />
         </a>
-        <a href="https://twitter.com/yourhandle" target="_blank" class="icon-button">
+        <a href="https://x.com/davidseal" target="_blank" class="icon-button">
           <img src="images/x.svg" alt="X" />
         </a>
-        <a href="https://instagram.com/yourhandle" target="_blank" class="icon-button">
+        <a href="https://instagram.com/davidseal" target="_blank" class="icon-button">
           <img src="images/instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://linkedin.com/in/yourprofile" target="_blank" class="icon-button">
+        <a href="https://linkedin.com/in/dseal" target="_blank" class="icon-button">
           <img src="images/linkedin.svg" alt="LinkedIn" />
         </a>
       </div>
