--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="David Seal – Product thinker, designer, and builder focused on elegant, impactful hardware and software." />
+  <meta name="description" content="David Seal – Product thinker, designer, and builder focused on elegant, impactful software and hardware." />
   <meta name="author" content="David Seal" />
-  <title>David Seal – Product Thinker & Builder</title>
+  <title>David Seal – Product Leader & Builder</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="canonical" href="https://yourdomain.com/" />
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
       <img src="images/avatar.png" alt="David Seal avatar" class="avatar" />
       <h1 class="fade-in delay-2"><span class="wave">👋</span> Hi, I'm David</h1>
       <p class="fade-in delay-3">
-        I'm a product thinker and builder who cares about elegant solutions and lasting impact. I've spent my career creating intuitive software and hardware shaped by real human needs.
+        I’m a product leader who crafts intuitive software and hardware experiences, grounded in real human needs and built for lasting impact.
       </p>
       <div class="links fade-in delay-4">
         <a href="mailto:david@davidseal.ca" target="_blank" class="icon-button">
@@ -41,7 +41,7 @@
 
     <section class="fade-in delay-6">
       <h2>Work Experience</h2>
-      <p>I've worked as both a developer and product leader at startups (including my own) and at larger companies like Shopify and Nokia. My experience spans launching software, payments, and hardware products, including time on the ground with manufacturing partners in Asia. You can find a detailed overview of my work history on <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>.</p>
+      <p>I've worked as both an engineer and product leader at startups (including my own) and at larger companies like Shopify and Nokia. My experience spans launching software, payments, and hardware products, including time on the ground with manufacturing partners in Asia. You can find a detailed overview of my work history on <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>.</p>
     </section>
 
     <section class="fade-in delay-7">
