--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <ul>
         <li>🕹️ Built and launched a top 100 mobile game for the early iPhone App Store</li>
         <li>🏆 Won a semi-autonomous robotics competition</li>
-        <li>🚑 Helped retrofit Land Cruisers for rural African healthcare</li>
+        <li>🚑 Helped retrofit Land Cruisers for rural healthcare in West Africa</li>
         <li>📄 Named on several patents: US12045831, US10878405, US11010044</li>
         <li>🥌 High school provincial curling champion, very skilled at walking on ice</li>
       </ul>
