--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="author" content="David Seal" />
   <title>David Seal – Product Leader & Builder</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="canonical" href="https://yourdomain.com/" />
+  <link rel="canonical" href="https://davidseal.ca/" />
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
   <main>
