--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
       </ul>
     </section>
     <footer class="fade-in delay-11">
-      <p>Design and code by me. Hosted on GitHub.</p>
+      <p>Thanks for stopping by!</p>
     </footer>
   </main>
-  <script src="script.js"></script>
 </body>
 </html>
