--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <li>🕹️ Built and launched a top 100 mobile game for the early iPhone App Store</li>
         <li>🏆 Won a semi-autonomous robotics competition</li>
         <li>🚑 Helped retrofit Land Cruisers for rural healthcare in West Africa</li>
-        <li>📄 Named on several patents: US12045831, US10878405, US11010044</li>
+        <li>📄 Named on several patents: US12045831, US10878405, US11010044, US12394292</li>
         <li>🥌 High school provincial curling champion, very skilled at walking on ice</li>
       </ul>
     </section>
