--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section class="fade-in delay-8">
       <h2>Hobbies</h2>
-      <p>Outside of work, I tinker with 3D printing, electronics, and create interactive light art, including contributing to <a href="https://www.deldiosglasshouse.com/moot" target="_blank">large-scale, climbable installations</a>. I also enjoy cooking and working on my pizza recipe.</p>
+      <p>Outside of work, I tinker with 3D printing, electronics, and create <a href="https://photos.app.goo.gl/e1pEUYS68bvsRUKq6" target="_blank">interactive light art</a>, including contributing to <a href="https://www.deldiosglasshouse.com/moot" target="_blank">large-scale, climbable installations</a>. I also enjoy cooking and working on my pizza recipe.</p>
     </section>
 
     <section class="fade-in delay-9">
